# cpp-stresstest

./: LICENSE  README.md  main.go  testset.json  utilities.go
Standard/: CMakeLists.txt  Makefile  accessControlDeclarationsInClass-4096.cpp  caseLabelsForSwitch-16384.cpp  charactersInAStringLiteral-65536.cpp  charactersInOneLogicalSourceLine-65536.cpp  classMembersDeclaredInASingleMemberSpecification-4096.cpp  directAndIndirectBaseClassesOfClass-16384.cpp  directAndIndirectVirtualBaseClassesOfClass-1024.cpp  directBaseClassesOfClass-1024.cpp  enumerationConstantsInEnum-4096.cpp  externIdentifierNameLength-1024.cpp  externIdentifiersInOneTranslationUnit-65536.cpp  friendsOfAClass-4096.cpp  fullExpressionInAConst-1048576.cpp  functionsRegisteredByat_quick_exit-32.cpp  functionsRegisteredByatexit-32.cpp  handlersPerTryBlock-256.cpp  identifierOrMacroNameLength-1024.cpp  initializerClauseInBracedInitList-16384.cpp  lambdaCapturesInOneLambdaExpression-256.cpp  macroCountInOneTranslationUnit-65536.cpp  memberInitializersInAConstructorDefinition-6144.cpp  nestedLinkageSpecifiers-1024.cpp  nestingLevelOfConditionalInclusion-256.cpp  nestingLevelsForIncludes-256.cpp  nestingLevelsOfParenthesizedExpressionsInAFullExpression-256.cpp  nestingOfClasses-256.cpp  nestingOfStatements-256.cpp  nonStaticDataMembersOfClass-16384.cpp  numberOfPlaceholders-10.cpp  parameterCountInFunctionDefinition-256.cpp  parametersInMacroDefinition-256.cpp  pointerAndArrayDeclaratorsModifyingSomething-256.cpp  recursiveConstexpr-512.cpp  recursivelyNestedTemplateInstantiations-1024.cpp  scopeQualificationOfOneIdentifier-256.cpp  sizeOfAnObject-262144.cpp  staticDataMemberOfClass-1024.cpp  structuredBindingsInOneDeclaration-256.cpp  (+1 more)
Standard/inc/: header1.h  header10.h  header100.h  header101.h  header102.h  header103.h  header104.h  header105.h  header106.h  header107.h  header108.h  header109.h  header11.h  header110.h  header111.h  header112.h  header113.h  header114.h  header115.h  header116.h  header117.h  header118.h  header119.h  header12.h  header120.h  header121.h  header122.h  header123.h  header124.h  header125.h  header126.h  header127.h  header128.h  header129.h  header13.h  header130.h  header131.h  header132.h  header133.h  header134.h  (+216 more)
