cmake_minimum_required(VERSION 2.8.9)

project(Standard)

add_executable(nestingOfStatements-256 nestingOfStatements-256.cpp )
add_executable(nestingLevelOfConditionalInclusion-256 nestingLevelOfConditionalInclusion-256.cpp )
add_executable(pointerAndArrayDeclaratorsModifyingSomething-256 pointerAndArrayDeclaratorsModifyingSomething-256.cpp )
add_executable(nestingLevelsOfParenthesizedExpressionsInAFullExpression-256 nestingLevelsOfParenthesizedExpressionsInAFullExpression-256.cpp )
add_executable(identifierOrMacroNameLength-1024 identifierOrMacroNameLength-1024.cpp )
add_executable(externIdentifierNameLength-1024 externIdentifierNameLength-1024.cpp )
add_executable(externIdentifiersInOneTranslationUnit-65536 externIdentifiersInOneTranslationUnit-65536.cpp )
add_executable(structuredBindingsInOneDeclaration-256 structuredBindingsInOneDeclaration-256.cpp )
add_executable(macroCountInOneTranslationUnit-65536 macroCountInOneTranslationUnit-65536.cpp )
add_executable(parameterCountInFunctionDefinition-256 parameterCountInFunctionDefinition-256.cpp )
add_executable(parametersInMacroDefinition-256 parametersInMacroDefinition-256.cpp )
add_executable(charactersInOneLogicalSourceLine-65536 charactersInOneLogicalSourceLine-65536.cpp )
add_executable(charactersInAStringLiteral-65536 charactersInAStringLiteral-65536.cpp )
add_executable(sizeOfAnObject-262144 sizeOfAnObject-262144.cpp )
add_executable(nestingLevelsForIncludes-256 nestingLevelsForIncludes-256.cpp )
add_executable(caseLabelsForSwitch-16384 caseLabelsForSwitch-16384.cpp )
add_executable(nonStaticDataMembersOfClass-16384 nonStaticDataMembersOfClass-16384.cpp )
add_executable(lambdaCapturesInOneLambdaExpression-256 lambdaCapturesInOneLambdaExpression-256.cpp )
add_executable(enumerationConstantsInEnum-4096 enumerationConstantsInEnum-4096.cpp )
add_executable(nestingOfClasses-256 nestingOfClasses-256.cpp )
add_executable(functionsRegisteredByatexit-32 functionsRegisteredByatexit-32.cpp )
add_executable(functionsRegisteredByat_quick_exit-32 functionsRegisteredByat_quick_exit-32.cpp )
add_executable(directAndIndirectBaseClassesOfClass-16384 directAndIndirectBaseClassesOfClass-16384.cpp )
add_executable(directBaseClassesOfClass-1024 directBaseClassesOfClass-1024.cpp )
add_executable(classMembersDeclaredInASingleMemberSpecification-4096 classMembersDeclaredInASingleMemberSpecification-4096.cpp )
add_executable(finalOverridingVirtualFunctions-16384 finalOverridingVirtualFunctions-16384.cpp )
add_executable(directAndIndirectVirtualBaseClassesOfClass-1024 directAndIndirectVirtualBaseClassesOfClass-1024.cpp )
add_executable(staticDataMemberOfClass-1024 staticDataMemberOfClass-1024.cpp )
add_executable(friendsOfAClass-4096 friendsOfAClass-4096.cpp )
add_executable(accessControlDeclarationsInClass-4096 accessControlDeclarationsInClass-4096.cpp )
add_executable(memberInitializersInAConstructorDefinition-6144 memberInitializersInAConstructorDefinition-6144.cpp )
add_executable(initializerClauseInBracedInitList-16384 initializerClauseInBracedInitList-16384.cpp )
add_executable(scopeQualificationOfOneIdentifier-256 scopeQualificationOfOneIdentifier-256.cpp )
add_executable(nestedLinkageSpecifiers-1024 nestedLinkageSpecifiers-1024.cpp )
add_executable(recursiveConstexpr-512 recursiveConstexpr-512.cpp )
add_executable(fullExpressionInAConst-1048576 fullExpressionInAConst-1048576.cpp )
add_executable(templateParametersInTemplateDeclaration-1024 templateParametersInTemplateDeclaration-1024.cpp )
add_executable(recursivelyNestedTemplateInstantiations-1024 recursivelyNestedTemplateInstantiations-1024.cpp )
add_executable(handlersPerTryBlock-256 handlersPerTryBlock-256.cpp )
add_executable(numberOfPlaceholders-10 numberOfPlaceholders-10.cpp )
